# Ap-project

./: CMakeLists.txt  accessories.cpp  accessories.h  game_core.cpp  game_core.h  game_page.cpp  game_page.h  login_window.cpp  login_window.h  main.cpp  result_menu.cpp  result_menu.h
